# RandomQuiz

./: .gitignore  Cargo.toml
migrations/: 20251104194413_create_polls_and_votes_tables.sql
src/: main.rs
src/db/: mod.rs
src/models/: mod.rs  poll.rs  state.rs  vote.rs
static/: index.html
